--- a/viraj-bagga-median-age.ipynb
+++ b/viraj-bagga-median-age.ipynb
@@ -2,60 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d21fe3d2-dd0c-4073-a5a9-49ccb138823a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing nessecary Dependencies\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "202a8ded-af33-4382-bfec-a7c244346126",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"nhoodmedianage20112015.csv\")"
+    "#Importing and assigning file containing median age of death per neighboorhood\n",
+    "df = pd.read_csv(\"https://data.wprdc.org/dataset/ee735209-4de7-4ea4-b446-bf0f0f6d9cb3/resource/c2e1500a-a12a-4e91-be94-76c6a892b7e2/download/nhoodmedianage20112015.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "12785529-9ee2-4a8d-9f7f-61a50ea2bdee",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 92 entries, 0 to 91\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   NEIGHBORHOOD           91 non-null     object \n",
-      " 1   BLACKdeaths            90 non-null     float64\n",
-      " 2   Black MD AGE AT DEATH  77 non-null     float64\n",
-      " 3   WHITEdeaths            90 non-null     float64\n",
-      " 4   White MD AGE AT DEATH  81 non-null     float64\n",
-      " 5   TOTALdeaths*           90 non-null     float64\n",
-      " 6   TOTAL MD AGE AT DEATH  89 non-null     float64\n",
-      "dtypes: float64(6), object(1)\n",
-      "memory usage: 5.2+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.head()\n",
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c123ac2d-fd1a-48e7-ac4c-57abdeaaef46",
    "metadata": {},
    "outputs": [
@@ -163,19 +133,26 @@
     }
    ],
    "source": [
+    "#Creating a series and defining what all information should be printed\n",
     "median_age_series = (\n",
     "    df.groupby(\"NEIGHBORHOOD\")[\"TOTAL MD AGE AT DEATH\"]\n",
     "    .median()\n",
     "    .fillna(0)\n",
     ")\n",
+    "\n",
+    "#Displaying data on every neighboorhood\n",
     "pd.set_option(\"display.max_rows\", None)\n",
+    "\n",
+    "#Sorting the data set from highest to lowest\n",
     "ranked_median_age = median_age_series.sort_values(ascending=False)\n",
-    "ranked_median_age\n"
+    "\n",
+    "#Displaying the series\n",
+    "ranked_median_age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "82060955-ee2d-4973-87e6-f4d0200f8cec",
    "metadata": {},
    "outputs": [
@@ -191,16 +168,22 @@
     }
    ],
    "source": [
+    "#Creating graph\n",
+    "\n",
+    "#defining graph dimensions\n",
     "plt.figure(figsize=(10, 12))\n",
     "\n",
+    "#Defining what kind of graphical representation should be made\n",
     "median_age_series.sort_values().plot(kind=\"barh\")\n",
     "\n",
+    "#Assigning titles to the graph\n",
     "plt.title(\"Median Age of Death by Neighborhood in Pittsburgh\")\n",
     "plt.xlabel(\"Median Age of Death\")\n",
     "plt.ylabel(\"Neighborhood\")\n",
     "\n",
+    "#Displaying the graph\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
