--- a/greg_notebook.ipynb
+++ b/greg_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2ebdd3b1-0ecb-45d9-bd32-98d2c943a0aa",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8e63f327-469f-4fb9-aebc-d7fc661a90df",
    "metadata": {},
    "outputs": [
@@ -41,10 +41,13 @@
     }
    ],
    "source": [
+    "# Imports water features sheet, sorts by neighborhood\n",
     "water_features = pd.read_csv(\"https://data.wprdc.org/datastore/dump/513290a6-2bac-4e41-8029-354cbda6a7b7\", index_col = \"_id\")\n",
-    "df = water_features[[\"neighborhood\",\"feature_type\"]].sort_values(by=\"neighborhood\")\n",
-    "df_vals = df[\"neighborhood\"].value_counts() \n",
-    "df_vals.plot(kind=\"bar\", figsize=(20,8), xlabel=\"Neighborhood\", ylabel=\"Number of Water Features\")"
+    "wf = water_features[[\"neighborhood\",\"feature_type\"]].sort_values(by=\"neighborhood\")\n",
+    "# Counts number of features per neighborhood\n",
+    "wf_vals = wf[\"neighborhood\"].value_counts() \n",
+    "# Plots total num of water features per neighborhood from most to least\n",
+    "wf_vals.plot(kind=\"bar\", figsize=(20,8), xlabel=\"Neighborhood\", ylabel=\"Number of Water Features\")"
    ]
   }
  ],
