--- a/viraj-bagga-median-age.ipynb
+++ b/viraj-bagga-median-age.ipynb
@@ -143,6 +143,10 @@
     "#Displaying data on every neighboorhood\n",
     "pd.set_option(\"display.max_rows\", None)\n",
     "\n",
+    "#removing neighboorhoods with no data\n",
+    "median_age_series = median_age_series[median_age_series != 0.0]\n",
+    "median_age_series = median_age_series.dropna()\n",
+    "\n",
     "#Sorting the data set from highest to lowest\n",
     "ranked_median_age = median_age_series.sort_values(ascending=False)\n",
     "\n",
